--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
+    "react-dnd": "^15.1.1",
+    "react-dnd-html5-backend": "^15.1.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
+    "react-modal": "^3.14.4",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
